<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/ivError"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:src="@drawable/ic_not_found"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:text="@string/not_found_message"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/try_again_action"
        android:visibility="gone"
        app:backgroundTint="@color/colorPrimary" />

</LinearLayout>