<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/main_search_box_padding_horizontal"
    android:layout_marginBottom="@dimen/margin_large">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/sdvAvatar"
        android:layout_width="@dimen/item_github_user_image_size"
        android:layout_height="@dimen/item_github_user_image_size"
        app:actualImageResource="@color/colorGithubUserImagePlaceholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderImage="@color/colorGithubUserImagePlaceholder"
        app:roundAsCircle="true" />

    <TextView
        android:id="@+id/tvGithubUserLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/sdvAvatar"
        app:layout_constraintStart_toEndOf="@id/sdvAvatar"
        app:layout_constraintTop_toTopOf="@id/sdvAvatar"
        tools:text="Satria Adi Putra" />

</androidx.constraintlayout.widget.ConstraintLayout>